--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,35 @@
+aiohttp==3.7.2
 appdirs==1.4.4
-astroid==2.4.2
+async-timeout==3.0.1
 attrs==20.2.0
+black==20.8b1
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 fuzzywuzzy==0.18.0
-iniconfig==1.0.1
-isort==5.5.2
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-more-itertools==8.5.0
-mypy==0.782
+h11==0.11.0
+httpcore==0.12.0
+httpx==0.16.1
+idna==2.10
+iniconfig==1.1.1
+lxml==4.6.1
+multidict==5.0.0
 mypy-extensions==0.4.3
 packaging==20.4
 pathspec==0.8.0
 pluggy==0.13.1
 py==1.9.0
-pylint==2.6.0
 pyparsing==2.4.7
-pytest==6.0.2
+pytest==6.1.2
+pytest-asyncio==0.14.0
 pytest-check==0.3.9
 python-Levenshtein==0.12.0
-regex==2020.7.14
-selectolax==0.2.7
+regex==2020.10.28
+rfc3986==1.4.0
+selectolax==0.2.9
 six==1.15.0
-toml==0.10.1
+sniffio==1.2.0
+toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
-w3lib==1.22.0
-wrapt==1.12.1
+yarl==1.6.2
